Sin and Codex: add Core BASIC 2.1 text-game foundation
Implement fixed two-dimensional arrays, terminal key polling, clear, wait, timer, inclusive random assignment, numeric intrinsics, and deterministic evaluator hosting.

Lower the complete feature set idiomatically across all ten active targets, add feature-gated runtime support and main-first structural coverage, and validate real interactive console cleanup through ConPTY.

Ship Trail Runner, Lantern Maze, and Sky Foundry with all-target compile/launch coverage; update specifications, architecture, toolchains, highlighting, CLI/Desktop labels, examples, parity, and the self-contained student reference.

Record the green milestone evidence and repository-wide automatic commit/push policy, and include the inspected .codex sandbox configuration as explicitly requested.